# checkup

./: .gitignore  CMakeLists.txt  README.md  make.rb
3rd/include/: json.hpp
3rd/lib/: libEGL.so.1.4.0  libGLESv2.so.3.2.0  libcurl.exp  libcurl.lib  liblog4cplus.so.1.1.2
applications/: CMakeLists.txt  CMakelists.txt  allocator_tester.cpp  clear_color.cpp  clear_to_tint.cpp  hourly_forecast_display.cpp  ratp_display.cpp  read_to_go.cpp  ready_to_go.cpp  route_display.cpp  string_tester.cpp  weather_display.cpp
applications/ready_to_go/: ready_to_go_screen.cpp  ready_to_go_screen.h
bento/include/bento_base/: platform.h
bento/include/bento_collection/: vector.h
c_api/include/: allocator_c_api.h  buffer_c_api.h  types_c_api.h
c_api/src/: CMakeLists.txt  allocator_c_api.cpp  buffer_c_api.cpp
cmake/: CMakeBuildSettings.cmake  CMakeCompiler.cmake  CMakeMacros.cmake  CMakePlatforms.cmake
data/: config.json
sdk/include/checkup_graphics/: backend.h  native_window.h  platform.h  shader_collection.h
sdk/include/checkup_rest/: curl_api.h  request.h  session.h  weather.h  weather_info.h
sdk/include/checkup_route/: route.h  utility.h
sdk/include/checkup_transport/: ratp.h
sdk/include/checkup_weather/: forecast.h  utility.h  weather.h  weather_category.h
sdk/src/: CMakeLists.txt
sdk/src/checkup_graphics/: backend.cpp  native_window.cpp  shader_collection.cpp
sdk/src/checkup_rest/: curl_api.cpp  session.cpp  weather.cpp  weather_info.cpp
sdk/src/checkup_route/: route.cpp  utility.cpp
sdk/src/checkup_transport/: ratp.cpp
sdk/src/checkup_weather/: forecast.cpp  utility.cpp  weather.cpp
sdlgui/: CMakeLists.txt
sdlgui/include/sdlgui/: button.h  label.h  nanort.h
sdlgui/src/: button.cpp  checkbox.cpp  common.cpp  dropdownbox.cpp  graph.cpp  imagepanel.cpp  imageview.cpp  label.cpp  nanovg.c  popup.cpp  progressbar.cpp  slider.cpp  switchbox.cpp  textbox.cpp  theme.cpp  window.cpp
